# ClassroomCV

./: .gitignore  .oxlintrc.json  README.md  bunfig.toml  docker-compose.yml  package.json  tsconfig.base.json  turbo.json
apps/api-service/: drizzle.config.ts  package.json  tsconfig.json
apps/api-service/drizzle/: 0000_lovely_old_lace.sql  0001_hypertable.sql  0002_lethal_stardust.sql  0003_storage_tiering.sql  0004_married_rocket_racer.sql  0005_data_quality.sql  0005_flaky_thaddeus_ross.sql  0006_fast_hot_tier.sql  0007_faulty_korvac.sql
apps/api-service/src/: index.ts
apps/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: architecture-decision.md  ml-improvement-plan.md  prior-art-and-best-practices.md  storage-and-reid-design.md  storage-database-decision.md
services/ml-service/: .env.gpu.example  pyproject.toml
services/ml-service/app/: activity.py  board_detect.py  config.py  db.py  detector.py  events.py  geometry.py  jobs.py  main.py  merge.py  models.py  quality.py  roles.py  teacher_chain.py  vlm_teacher.py
services/ml-service/app/trackers/: classroom_botsort.yaml
services/ml-service/eval/: ground_truth.json  render_claims.py  restore.py  run_eval.py  snapshot.py
services/ml-service/tests/: test_activity.py  test_api.py  test_board_detect.py  test_db.py  test_detector.py  test_events.py  test_geometry.py  test_integration.py  test_jobs.py  test_merge.py  test_quality.py  test_roles.py  test_smoke.py  test_teacher_chain.py  test_vlm_teacher.py
services/ml-service/tests/assets/: make_classroom_synth.py
(+65 files in other folders)
