[project]
name = "ml-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.31.0",
  "fastapi>=0.139.0",
  "httpx>=0.28.1",
  "lap>=0.5.13",
  "numpy>=2.5.1",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "python-multipart>=0.0.32",
  "torch>=2.12.1",
  "torchvision>=0.27.1",
  "ultralytics>=8.4.89",
  "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
